--- a/persistance/pom.xml
+++ b/persistance/pom.xml
@@ -1,163 +1,205 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.timsmeet</groupId>
-    <artifactId>appointment-manager</artifactId>
-    <version>1.0</version>
-  </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.timsmeet</groupId>
+        <artifactId>appointment-manager</artifactId>
+        <version>1.0</version>
+    </parent>
 
-  <artifactId>appointment-manager-persistance</artifactId>
-  <packaging>jar</packaging>
-  <version>${timsmeet.version}</version>
+    <artifactId>appointment-manager-persistance</artifactId>
+    <packaging>jar</packaging>
 
-  <name>Timsmeet appointment manager object model.</name>
+    <name>Timsmeet appointment manager object model.</name>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <timsjpaddl.version>0.1.0</timsjpaddl.version>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.timsmeet</groupId>
-      <artifactId>hibernate4ddl</artifactId>
-      <version>${timsmeet.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-    </dependency>
-<!--    
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>ojdbc6</artifactId>
-    </dependency>      
--->    
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+        <!-- <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc6</artifactId> </dependency> -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+    </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <executions>
-          <execution>
-            <id>generateOracleSql</id>
-            <phase>${sql.generation.phase}</phase>
-            <!-- this is process-classes in our case currently -->
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <configuration>
-              <arguments>
-                <argument>com.timsmeet.persistance.model</argument>
-                <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
-                <argument>Oracle10g</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <!-- <execution> <id>generateFirebirdSql</id> <phase>${sql.generation.phase}</phase> <goals> <goal>java</goal> </goals> <configuration> 
-            <arguments> <argument>com.timsmeet.persistance.model</argument> <argument>${project.basedir}/src/main/resources/sql/generated/</argument> <argument>Firebird</argument> 
-            </arguments> </configuration> </execution> -->
-          <execution>
-            <id>generateMySQLSql</id>
-            <phase>${sql.generation.phase}</phase>
-            <!-- this is process-classes in our case currently -->
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <configuration>
-              <arguments>
-                <argument>com.timsmeet.persistance.model</argument>
-                <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
-                <argument>MySQL</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>generatePostgreSQLSql</id>
-            <phase>${sql.generation.phase}</phase>
-            <!-- this is process-classes in our case currently -->
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <configuration>
-              <arguments>
-                <argument>com.timsmeet.persistance.model</argument>
-                <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
-                <argument>PostgreSQL</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>generateHSQLSql</id>
-            <phase>${sql.generation.phase}</phase>
-            <!-- this is process-classes in our case currently -->
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <configuration>
-              <arguments>
-                <argument>com.timsmeet.persistance.model</argument>
-                <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
-                <argument>HSQL</argument>
-              </arguments>
-            </configuration>
-          </execution>
-        </executions>
+    <profiles>
+        <profile>
+            <id>ddl-generator</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.timsmeet</groupId>
+                    <artifactId>hibernate4ddl</artifactId>
+                    <version>${timsjpaddl.version}</version>
+                </dependency>
+            </dependencies>            
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>generateOracleSql</id>
+                                <phase>${sql.generation.phase}</phase>
+                                <!-- this is process-classes in our case currently -->
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>
+                                        <argument>com.timsmeet.persistance.model</argument>
+                                        <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
+                                        <argument>Oracle10g</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <!-- <execution> <id>generateFirebirdSql</id> <phase>${sql.generation.phase}</phase> <goals> 
+                                <goal>java</goal> </goals> <configuration> <arguments> <argument>com.timsmeet.persistance.model</argument> <argument>${project.basedir}/src/main/resources/sql/generated/</argument> 
+                                <argument>Firebird</argument> </arguments> </configuration> </execution> -->
+                            <execution>
+                                <id>generateMySQLSql</id>
+                                <phase>${sql.generation.phase}</phase>
+                                <!-- this is process-classes in our case currently -->
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>
+                                        <argument>com.timsmeet.persistance.model</argument>
+                                        <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
+                                        <argument>MySQL</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generatePostgreSQLSql</id>
+                                <phase>${sql.generation.phase}</phase>
+                                <!-- this is process-classes in our case currently -->
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>
+                                        <argument>com.timsmeet.persistance.model</argument>
+                                        <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
+                                        <argument>PostgreSQL</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generateHSQLSql</id>
+                                <phase>${sql.generation.phase}</phase>
+                                <!-- this is process-classes in our case currently -->
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>
+                                        <argument>com.timsmeet.persistance.model</argument>
+                                        <argument>${project.basedir}/src/main/resources/sql/generated/</argument>
+                                        <argument>HSQL</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
 
-        <configuration>
-          <includeProjectDependencies>true</includeProjectDependencies>
-          <mainClass>com.timsmeet.hibernate4ddl.util.generator.SchemaGenerator</mainClass>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+                        <configuration>
+                            <includeProjectDependencies>true</includeProjectDependencies>
+                            <mainClass>com.timsmeet.hibernate4ddl.util.generator.SchemaGenerator</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on 
+                            the Maven build itself. -->
+                        <plugin>
+                            <groupId>org.eclipse.m2e</groupId>
+                            <artifactId>lifecycle-mapping</artifactId>
+                            <version>1.0.0</version>
+                            <configuration>
+                                <lifecycleMappingMetadata>
+                                    <pluginExecutions>
+                                        <pluginExecution>
+                                            <pluginExecutionFilter>
+                                                <groupId>org.codehaus.mojo</groupId>
+                                                <artifactId>
+                                                    exec-maven-plugin
+                                                </artifactId>
+                                                <versionRange>
+                                                    [1.2.1,)
+                                                </versionRange>
+                                                <goals>
+                                                    <goal>java</goal>
+                                                </goals>
+                                            </pluginExecutionFilter>
+                                            <action>
+                                                <ignore></ignore>
+                                            </action>
+                                        </pluginExecution>
+                                    </pluginExecutions>
+                                </lifecycleMappingMetadata>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+
+
+        </profile>
+    </profiles>
 </project>
