project reorganization, testing

--- a/persistance/src/main/resources/persistence-h2sql.properties
+++ b/persistance/src/main/resources/persistence-h2sql.properties
@@ -7,4 +7,5 @@ jdbc.pass=
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+#hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
